--- a/checkpoint-frontend/css/style.css
+++ b/checkpoint-frontend/css/style.css
@@ -85,7 +85,22 @@
     padding: 15px;
     margin:5px;
 }
-
+.h2-video{
+   display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+    }
+.section-video{
+    padding:5px;
+    }
+.video{
+    align-items: center;
+    left:50%;
+    width: 60%;
+    margin-top: 10% ;
+    margin-left: 20%; 
+}
 .section-footer {
     display: flex;
     margin-right: auto;
